# KurA

./: .gitignore  Cargo.toml  README.md  run.bat  run.sh  run_env.sh  setup.bat
.github/workflows/: release-packages.yml  release.yml
kura-voice-bin/: .SRCINFO  PKGBUILD
music_opus/: why as soon as we become so close we have to say goodbye.opus
npm/registry-package/: package.json
npm/registry-package/scripts/: install-logic.js  install.js
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/deb/: build_deb.sh
packaging/deb/DEBIAN/: control  postinst  prerm
packaging/rpm/: build_rpm.sh  kura-voice.spec
packaging/systemd/: kura.service  kura_voice.service
packaging/windows/: LICENSE.rtf  build_msi.ps1  kura.wxs
scripts/: convert_all_to_opus.ps1  convert_all_to_opus.sh  install_deps_arch.sh  install_deps_fedora_rpm.sh  install_deps_ubuntu_debian.sh  run_linux.sh  run_windows.ps1  setup.sh
src/: main.rs
