[package]
name = "kura_voice"
version = "0.1.7"
edition = "2021"

[[bin]]
name = "kura"
path = "src/main.rs"

[[bin]]
name = "kurac"
path = "src/bin/kurac.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
songbird = { version = "0.5", features = ["serenity", "builtin-queue"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
anyhow = "1"
symphonia = { version = "0.5", default-features = false, features = ["ogg"] }
rand = "0.8"
dialoguer = "0.11"
